// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Logout /> rendering should render correctly 1`] = `
<div>
  <div
    class="container content"
    id="logout"
  >
    <div
      class="inner"
    >
      <div
        class="main-column w-100"
      >
        <div
          class="inner"
        >
          <h2>
            Logout successful
          </h2>
          <div
            class="links row"
          >
            <a
              class="button partial"
              href="/default/status"
            >
              Login again
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Logout /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div>
  <div
    class="container content"
    id="logout"
  >
    <div
      class="inner"
    >
      <div
        class="main-column w-100"
      >
        <div
          class="inner"
        >
          <h2>
            LOGOUT_CONTENT
          </h2>
          <div
            class="links row"
          >
            <a
              class="button partial"
              href="/default/status"
            >
              LOGIN_AGAIN
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
